# Holoflow

./: .clang-format  .cz.yaml  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  VERSION  about.html  index.html  model.dot  pipeline_graph.dot  requirements.txt  vcpkg-configuration.json  vcpkg.json
benchmarks/: CMakeLists.txt
benchmarks/memcpy/: CMakeLists.txt  memcpy.cc
doc/: CMakeLists.txt  Doxyfile.in
doc/md/: base.md  content.md
doc/mkdocs/: mkdocs.yml
doc/mkdocs/docs/: about.md  index.md
doc/mkdocs/docs/holoflow/: architecture.md  index.md
doc/mkdocs/docs/holoflow/concepts/: graph.md  tasks.md  tensors.md
doc/mkdocs/docs/holoflow/guides/: authoring.md  inspection.md
doc/mkdocs/docs/holoflow/runtime/: compiler.md  scheduler.md
doc/mkdocs/docs/schemas/: angular_spectrum_settings.md  average_settings.md  batch_queue_settings.md  conversion_settings.md  convolution_settings.md  display_tensor_settings.md  fft_shift_settings.md  fresnel_diffraction_settings.md  holofile_settings.md  memcpy_settings.md  pca_settings.md  pct_clip_settings.md  registration_settings.md  reshape_settings.md  sliding_average_settings.md  stft_settings.md
doc/mkdocs/docs/schemas/asyncs/: batch_queue_settings.md
doc/mkdocs/docs/schemas/sinks/: display_tensor_settings.md  holofile_settings.md
doc/mkdocs/docs/schemas/sources/: ametek_s710_euresys_coaxlink_octo_settings.md  ametek_s711_euresys_coaxlink_qsfp+_settings.md  holofile_settings.md
doc/mkdocs/docs/schemas/syncs/: angular_spectrum_settings.md  average_settings.md  convolution_settings.md  fft_shift_settings.md  filter2d_settings.md  fresnel_diffraction_settings.md  pca_settings.md  reshape_settings.md  rotation_settings.md
example/holoflow/: CMakeLists.txt
example/holoflow/include/holoflow/examples/: sqrt_task.hh
example/holoflow/src/: sqrt_task.cc
src/curaii/: CMakeLists.txt  cublas.cc  cuda_runtime.cc  cufft.cc  cusolver_dn.cc  library_types.cc  logger.cc
src/curaii/include/curaii/: cublas.hh  cuda.hh  cuda.hxx  cufft.hh  cusolver.hh  nvrtc.hh
src/curaii/src/cuda/: cublas.cc  cuda.cc  cufft.cc  cusolver.cc  logger.cc  logger.hh  nvrtc.cc
src/curaii/v2/: cublas.cc  cuda.cc  cufft.cc  cusolver_common.cc  cusolver_dn.cc  logger.cc
src/holoflow/: CMakeLists.txt  accumulator.cc  model.cc  model2.cc  model_builder.cc  model_descriptor.cc  sink.cc  source.cc  task.cc  tensor.cc
src/holoflow/include/holoflow/core/: graph_spec.hh  registry.hh  tasks.hh  tensor.hh
src/holoflow/include/holoflow/runtime/: compiler.hh  graph_display.hh  graph_exec.hh
src/holoflow/src/: bug.hh  logger.cc  logger.hh
src/holoflow/src/core/: graph_spec.cc  registry.cc  tasks.cc  tensor.cc
src/holoflow/src/core/runtime/: compiler.cc  graph_exec.cc
src/holoflow/src/runtime/: compiler.cc  graph_display.cc  graph_exec.cc
src/holoflow/v2/: error.cc  model.cc  model_transaction.cc
src/holoflow/v3/model/: compiler.cc  descriptor.cc  model.cc  runner.cc
src/holovibes/: CMakeLists.txt  main.cc
src/holovibes/accumulators/: batched_spsc_accumulator.cc  gate_accumulator.cc  sliding_average_accumulator.cu
src/holovibes/pipeline/: manager.cc  worker.cc
src/holovibes/schemas/tasks/: angular_spectrum_settings.json  average_settings.json  conversion_settings.json  display_tensor_settings.json  filter2d_settings.json  fresnel_diffraction_settings.json  holofile_settings.json  pca_settings.json  registration_settings.json  sliding_average_settings.json  stft_settings.json
src/holovibes/schemas/tasks/asyncs/: batch_queue_settings.json
src/holovibes/schemas/tasks/sinks/: holofile_settings.json
src/holovibes/sinks/: holofile_record_sink.cc  qt_display_sink.cc
src/holovibes/sources/: holofile_source.cc
src/holovibes/src/: app_utils.cc  app_utils.hh  logger.cc  logger.hh  main.cc  resources.qrc  settings_loader.cc  settings_loader.hh
src/holovibes/src/pipeline/: field_help.cc  field_help.hh  graph_builder.cc  graph_builder.hh  graph_builder_tasks.cc  graph_builder_tasks.hh  graph_builder_tracer.cc  graph_builder_tracer.hh  graph_builder_tracer.hxx  graph_builder_v2.cc  graph_builder_v2.hh  graph_builder_v2.hxx  manager.cc  manager.hh  settings.cc  settings.hh  validation.cc  validation.hh
src/holovibes/src/tasks/: angular_spectrum.cu  average.hh  batch_queue.cc  conversion.cu  convolution.hh  display_tensor.cc  display_tensor.hh  fft_shift.cu  fft_shift.hh  fresnel_diffraction.cu  fresnel_diffraction.hh  holofile.cc  holofile.hh  pca.cc  pca.hh  reshape.cc  reshape.hh  slide_avg.cu  slide_avg.hh  stft.cc
src/holovibes/src/ui/: main_window.cc  main_window.hh  main_windows.hh  tensor_display_widget.cc  tensor_display_widget.hh  theme.cc  theme.hh
src/holovibes/tasks/: angular_spectrum_task.cu  apply_lens_callback.cu  average_task.cu  convert_task.cu  fft_shift_task.cu  fresnel_diffraction_task.cu  identity_task.cc  memcpy_task.cc  pca_task.cc  pca_task.cu  percentile_clip_task.cu  registration.cu  stft_task.cc
src/holovibes/ui/: export_widget.cc  image_rendering_widget.cc  import_widget.cc  main_window.cc  tensor_display_widget.cc  view_widget.cc
test/holonp/: CMakeLists.txt  abs_test.cu  add_test.cu  arange_test.cu  argmax_test.cu  asarray_test.cu  ascontiguousarray_test.cu  concatenate_test.cu  conj_test.cu  copy_test.cu  divide_test.cu  empty_test.cu  equal_test.cu  fft2_test.cu  fft_test.cu  fftshift_test.cu  irfft2_test.cu  max_test.cu  mean_test.cu  meshgrid_test.cu  min_test.cu  multiply_test.cu  reshape_test.cu  rfft2_test.cu  rfft_test.cu  slice_test.cu  subtract_test.cu  transpose_test.cu  where_test.cu  zeros_test.cu
test/holonp/python/: oracle.py
test/holonp/support/: python_oracle.cc  python_oracle.hh  sync_task_runner.cc  sync_task_runner.hh  tensor_test_buffer.cc  tensor_test_buffer.hh
test/holotask/: CMakeLists.txt  angular_spectrum_test.cu  correct_phase.cc  extract_ranges.cc  filter2d_test.cu  flatfield_test.cu  fresnel_diffraction_test.cu  fresnel_qout.cc  holofile_sink_test.cc  zernike_phase.cc  zernike_phase_test.cu
(+411 files in other folders)
